[package]
name = "cuda-confidence-cascade"
version = "0.1.0"
edition = "2021"
description = "Bayesian confidence propagation network — cascade nodes, edges, gates, decay, convergence monitoring"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-confidence-cascade"
keywords = ["ai", "fleet", "agent"]

[dependencies]
cuda-equipment = { path = "../cuda-equipment" }
